--- a/templates/cards.html
+++ b/templates/cards.html
@@ -18,4 +18,10 @@
 <!-- Mount Llambda's card on to this element. -->
 <div id="llambda"></div>
 
+<!-- Mount Merge's card on to this element. -->
+<div id="merge"></div>
+
+<!-- Mount Off-by-one's card on to this element. -->
+<div id="off-by-one"></div>
+
 {% endblock %}
